--- a/views/productiontransfer/productiontransfer.ejs
+++ b/views/productiontransfer/productiontransfer.ejs
@@ -91,18 +91,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row mb-1">
-                            <div class="col-md-8 mb-1">
-                                <div class="input-group">
-                                    <div class="input-group-append">
-                                        <span class="input-group-text">Branch</span>
-                                    </div>
-                                    <select class="form-control text-center" name="branchid" id="branchid">
-                                        <option value="">-- Select Branch --</option>
-                                    </select>  
-                                </div>
-                            </div>
-                            <div class="col-md-4">
+                        <div class="row mb-1 d-flex justify-content-center">
+                            <div class="col-md-6">
                                 <div class="input-group">
                                     <div class="input-group-append">
                                         <span class="input-group-text">Quantity</span>
