--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -44,7 +44,7 @@
                                 </select>          
                             </div>
                         </div>
-                        <div class="row mb-2 justify-content-center">
+                        <div class="row mb-2">
                             <div class="col-md-6">
                                 <label class="form-label">Price</label>
                                 <input id="pricemodal" name="pricemodal" type="text" class="form-control" placeholder="Enter New Price" aria-label="fullname" aria-describedby="basic-addon1">        
@@ -111,13 +111,21 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row mb-1 justify-content-center">
+                        <div class="row mb-1">
+                            <div class="col-md-6 mb-1">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Units</span>
+                                    </div>
+                                    <input id="units" name="units" type="text" class="form-control" placeholder="Enter Units" aria-label="units" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
                             <div class="col-md-6 mb-1">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="price" name="price" type="text" class="form-control" placeholder="Enter Contact Info" aria-label="contactinfo" aria-describedby="basic-addon1">
+                                    <input id="price" name="price" type="number" class="form-control" placeholder="Enter Price" aria-label="price" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
