--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -348,23 +348,22 @@
 
     const toggleButton = document.getElementById("toggleButton");
     const toggleView = document.querySelector(".toggle-view");
-
     let isOpen = false; 
+    if (toggleButton != null && toggleView != null){
+        toggleButton.addEventListener("click", function() {
+            if (!isOpen) {
+                toggleView.style.display = "block";
+                toggleView.style.height = toggleView.scrollHeight + "px"; 
+                toggleButton.innerHTML = '<i class="fas fa-chevron-up"></i>';
+            } else {
+                toggleView.style.height = "0";
+                setTimeout(() => {
+                toggleView.style.display = "none";
+                }, 500);
+                toggleButton.innerHTML = '<i class="fas fa-chevron-right"></i>';
+            }
 
-    toggleButton.addEventListener("click", function() {
-    if (!isOpen) {
-        toggleView.style.display = "block";
-        toggleView.style.height = toggleView.scrollHeight + "px"; 
-        toggleButton.innerHTML = '<i class="fas fa-chevron-up"></i>';
-    } else {
-        toggleView.style.height = "0";
-        setTimeout(() => {
-        toggleView.style.display = "none";
-        }, 500);
-        toggleButton.innerHTML = '<i class="fas fa-chevron-right"></i>';
+            isOpen = !isOpen;
+        });
     }
-
-    isOpen = !isOpen;
-    });
-
 </script>
