Added layout for inventory valuation report

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -182,7 +182,7 @@
         <a class="collapse-item" href="#">
           <span>Stock Adjustment</span>
         </a>
-        <a class="collapse-item" href="#">
+        <a class="collapse-item" href="/valuationreport">
           <span>Valuation Report</span>
         </a>
         <a class="collapse-item" href="/systemlogs">
