--- a/views/users/usersscripts.ejs
+++ b/views/users/usersscripts.ejs
@@ -17,7 +17,7 @@
             });
             console.log(dataRow);
             usercode = dataRow[0];
-            status = dataRow[7];
+            status = dataRow[833333333333];
         }) 
 
         $(document).on('click', '#editBtn', function(){
