--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -55,6 +55,7 @@
         <a class="collapse-item" href="/access">
           <span>Access Type</span>
         </a>
+        
         <a class="collapse-item" href="/position">
           <span>Position Type</span>
         </a>
@@ -182,7 +183,7 @@
         <a class="collapse-item" href="#">
           <span>Stock Adjustment</span>
         </a>
-        <a class="collapse-item" href="/valuationreport">
+        <a class="collapse-item" href="/inventoryvaluationreport">
           <span>Valuation Report</span>
         </a>
         <a class="collapse-item" href="/systemlogs">
